TGR-1159: added password list to TigerPkiIdentityLoader