@@ -4,10 +4,10 @@
 
 package de.gematik.test.tiger.common.config;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.Builder;
 
 /** Stores a map of key/value-pairs. */
@@ -29,7 +29,7 @@ public class BasicTigerConfigurationSource extends AbstractTigerConfigurationSou
     this.values = new HashMap<>();
   }
 
-  public Map<TigerConfigurationKey, String> applyTemplatesAndAddValuesToMap(
+  public synchronized Map<TigerConfigurationKey, String> applyTemplatesAndAddValuesToMap(
       List<TigerTemplateSource> loadedTemplates,
       Map<TigerConfigurationKey, String> loadedAndSortedProperties) {
     Map<TigerConfigurationKey, String> finalValues = new HashMap<>();
@@ -41,24 +41,34 @@ public class BasicTigerConfigurationSource extends AbstractTigerConfigurationSou
         loadedTemplates.stream()
             .map(template -> template.applyToAllApplicable(this, finalValues))
             .flatMap(List::stream)
-            .collect(Collectors.toList());
-    appliedTemplates.forEach(key -> finalValues.remove(key));
+            .toList();
+    appliedTemplates.forEach(finalValues::remove);
 
     return finalValues;
   }
 
   @Override
-  public Map<TigerConfigurationKey, String> getValues() {
-    return values;
+  public synchronized Map<TigerConfigurationKey, String> getValues() {
+    return Collections.unmodifiableMap(values);
   }
 
   @Override
-  public void putValue(TigerConfigurationKey key, String value) {
+  public synchronized void putValue(TigerConfigurationKey key, String value) {
     values.put(key, value);
   }
 
   @Override
-  public void removeValue(TigerConfigurationKey key) {
+  public synchronized void removeValue(TigerConfigurationKey key) {
     values.remove(key);
+  }
+
+  @Override
+  public synchronized boolean containsKey(TigerConfigurationKey key) {
+    return values.containsKey(key);
+  }
+
+  @Override
+  public synchronized String getValue(TigerConfigurationKey key) {
+    return values.get(key);
   }
 }
